src/bin/snapshots/cg2util__cli_control-16.snap
---
source: src/bin/cg2util.rs
expression: "cli(\"cg2util control grp --inherit igrp\")"
---
Ok(
    Cli {
        command: Control(
            ControlCommand {
                cgroup: "grp",
                control: ControlList {
                    controllers: [],
                    inherit: Some(
                        "igrp",
                    ),
                },
                auto: false,
            },
        ),
    },
)
