src/bin/snapshots/cg2util__cli_control-19.snap
---
source: src/bin/cg2util.rs
expression: "cli(\"cg2util control grp --inherit +cpu\")"
---
Ok(
    Cli {
        command: Control(
            ControlCommand {
                cgroup: "grp",
                control: ControlList {
                    controllers: [],
                    inherit: Some(
                        "+cpu",
                    ),
                },
                auto: false,
            },
        ),
    },
)
