src/bin/snapshots/cg2util__cli_control-3.snap
---
source: src/bin/cg2util.rs
expression: "cli(\"cg2util control grp +cpu\")"
---
Ok(
    Cli {
        command: Control(
            ControlCommand {
                cgroup: "grp",
                control: ControlList {
                    controllers: [
                        ControllerFlag {
                            name: "cpu",
                            _enable: true,
                        },
                    ],
                    inherit: None,
                },
                auto: false,
            },
        ),
    },
)
